# youtube-engine

./: .gitmodules  CMakeLists.txt  README.md
defaultAssets/materials/: default_material.mat
docs/: References.MD  TODO.md
include/youtube_engine/: engine.h  service_locator.h
include/youtube_engine/core/: entity.h  game.h  scene.h
include/youtube_engine/core/components/: camera_component.h  mesh_component.h  transform_component.h
include/youtube_engine/input/: input_devices.h  input_key.h  input_manager.h
include/youtube_engine/platform/: configuration.h  entry_point.h  filesystem.h  game.h  serializable.h  window.h
include/youtube_engine/rendering/: buffer.h  images.h  renderables.h  renderer.h  shader.h  texture.h  types.h
include/youtube_engine/resources/: resource_manager.h
include/youtube_engine/resources/types/: image.h  material.h  mesh.h  resource.h
include/youtube_engine/vr/: vr_subsystem.h
sandbox/openxr/: main.cpp
shaders/: basic.frag  basic.vert  triangle.vert  triangle2.vert
src/: engine.cpp
src/core/: entity.cpp  game.cpp  scene.cpp
src/core/components/: camera_component.cpp  mesh_component.cpp  transform_component.cpp
src/input/: input_manager.cpp  multiplatform_input.cpp  multiplatform_input.h  sdl_input.cpp  sdl_input.h
src/platform/: configuration_manager.cpp  configuration_manager.h  filesystem.cpp  game.cpp  glfw_window.cpp  glfw_window.h  multiplatform_window.cpp  multiplatform_window.h  sdl_window.cpp  sdl_window.h
src/rendering/: images.cpp  stbi.cpp
src/rendering/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_descriptor_set_manager.cpp  vulkan_descriptor_set_manager.h  vulkan_implementations.h.cpp  vulkan_includes.h  vulkan_initializers.cpp  vulkan_initializers.h  vulkan_memory_allocator.cpp  vulkan_memory_allocator.h  vulkan_pipeline_builder.cpp  vulkan_pipeline_builder.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_types.h  vulkan_utilities.cpp  vulkan_utilities.h
src/rendering/vulkan/renderer_extensions/: renderer_extension.h  vulkan_vr_renderer_extension.cpp  vulkan_vr_renderer_extension.h  vulkan_window_renderer_extension.cpp  vulkan_window_renderer_extension.h
src/resources/: resource_manager.cpp  resource_manager.h
src/resources/types/: image.cpp  material.cpp  mesh.cpp  mesh_resource.h  resource.h
src/vr/openxr/: open_xr_subsystem.cpp  open_xr_subsystem.h
